--- a/Projekat/static/index.html
+++ b/Projekat/static/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Saska&Stefan</title>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/toast.js"></script>
 </head>
 <body>
+<div id="sport">
+    <router-view></router-view>
+</div>
 
-<h1>OG|I</h1>
+<script src="js/vue.js"></script>
+<script src="js/vue-router.js"></script>
+<script src="js/axios.js"></script>
+<script src="components/registration.js"></script>
+<script src="js/app.js"></script>
 
 </body>
 </html>
