implement user login

--- a/Projekat/static/index.html
+++ b/Projekat/static/index.html
@@ -15,6 +15,7 @@
 <script src="js/vue-router.js"></script>
 <script src="js/axios.js"></script>
 <script src="components/registration.js"></script>
+<script src="components/login.js"></script>
 <script src="js/app.js"></script>
 
 </body>
