--- a/Projekat/static/index.html
+++ b/Projekat/static/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Saska&Stefan</title>
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/toast.js"></script>
 </head>
