display profile info of logged user and enable change of info

--- a/Projekat/static/index.html
+++ b/Projekat/static/index.html
@@ -17,6 +17,7 @@
 <script src="js/axios.js"></script>
 <script src="components/registration.js"></script>
 <script src="components/login.js"></script>
+<script src="components/user_profile.js"></script>
 <script src="components/sport_facility_display.js"></script>
 <script src="js/app.js"></script>
 
