--- a/Projekat/static/index.html
+++ b/Projekat/static/index.html
@@ -18,6 +18,7 @@
 <script src="components/registration.js"></script>
 <script src="components/login.js"></script>
 <script src="components/sport_facility_display.js"></script>
+<script src="components/single_facility_display.js"></script>
 <script src="js/app.js"></script>
 
 </body>
