--- a/Projekat/static/index.html
+++ b/Projekat/static/index.html
@@ -19,6 +19,7 @@
 <script src="components/login.js"></script>
 <script src="components/user_profile.js"></script>
 <script src="components/sport_facility_display.js"></script>
+<script src="components/create_sport_facility.js"></script>
 <script src="js/app.js"></script>
 
 </body>
