--- a/Projekat/static/index.html
+++ b/Projekat/static/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Saska&Stefan</title>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="styles/single_facility_display_style.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/toast.js"></script>
 </head>
@@ -15,6 +17,7 @@
 <script src="js/vue.js"></script>
 <script src="js/vue-router.js"></script>
 <script src="js/axios.js"></script>
+<script src="bootstrap/js/bootstrap.js"></script>
 <script src="components/registration.js"></script>
 <script src="components/login.js"></script>
 <script src="components/user_profile.js"></script>
