--- a/Projekat/static/index.html
+++ b/Projekat/static/index.html
@@ -5,6 +5,7 @@
     <title>Saska&Stefan</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css">
     <link rel="stylesheet" type="text/css" href="styles/single_facility_display_style.css">
+    <link rel="stylesheet" type="text/css" href="styles/managers_facility_display_style.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/toast.js"></script>
 </head>
@@ -22,6 +23,8 @@
 <script src="components/sport_facility_display.js"></script>
 <script src="components/single_facility_display.js"></script>
 <script src="components/create_sport_facility.js"></script>
+<script src="components/managers_facility_display.js"></script>
+<script src="components/add_new_workout.js"></script>
 <script src="js/app.js"></script>
 
 </body>
