implement customer subscription to new memberships

--- a/Projekat/static/index.html
+++ b/Projekat/static/index.html
@@ -22,6 +22,9 @@
 <script src="components/sport_facility_display.js"></script>
 <script src="components/single_facility_display.js"></script>
 <script src="components/create_sport_facility.js"></script>
+<script src="components/manager_registration.js"></script>
+<script src="components/coach_registration.js"></script>
+<script src="components/memberships.js"></script>
 <script src="js/app.js"></script>
 
 </body>
