--- a/Projekat/static/index.html
+++ b/Projekat/static/index.html
@@ -28,6 +28,7 @@
 <script src="components/memberships.js"></script>
 <script src="components/managers_facility_display.js"></script>
 <script src="components/add_new_workout.js"></script>
+<script src="components/change_workout.js"></script>
 <script src="js/app.js"></script>
 
 </body>
