Add filtering workouts and enable removing search settings

--- a/Projekat/static/index.html
+++ b/Projekat/static/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css">
     <link rel="stylesheet" type="text/css" href="styles/single_facility_display_style.css">
     <link rel="stylesheet" type="text/css" href="styles/managers_facility_display_style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/toast.js"></script>
 </head>
