--- a/Projekat/static/index.html
+++ b/Projekat/static/index.html
@@ -29,6 +29,7 @@
 <script src="components/memberships.js"></script>
 <script src="components/add_new_workout.js"></script>
 <script src="components/change_workout.js"></script>
+<script src="components/workout_history_display.js"></script>
 <script src="js/app.js"></script>
 
 </body>
