implement scheduling of personal workout

--- a/Projekat/static/index.html
+++ b/Projekat/static/index.html
@@ -30,6 +30,7 @@
 <script src="components/add_new_workout.js"></script>
 <script src="components/change_workout.js"></script>
 <script src="components/workout_history_display.js"></script>
+<script src="components/schedule_personal_workout.js"></script>
 <script src="js/app.js"></script>
 
 </body>
