--- a/Projekat/static/index.html
+++ b/Projekat/static/index.html
@@ -30,7 +30,7 @@
 <script src="components/add_new_workout.js"></script>
 <script src="components/change_workout.js"></script>
 <script src="components/users_display.js"></script>
+<script src="components/manager_users_display.js"></script>
 <script src="js/app.js"></script>
-
 </body>
 </html>
