--- a/Projekat/static/index.html
+++ b/Projekat/static/index.html
@@ -31,6 +31,7 @@
 <script src="components/change_workout.js"></script>
 <script src="components/workout_history_display.js"></script>
 <script src="components/schedule_personal_workout.js"></script>
+<script src="components/coach_workout_display.js"></script>
 <script src="js/app.js"></script>
 
 </body>
