make vue component for navbar

--- a/Projekat/static/index.html
+++ b/Projekat/static/index.html
@@ -32,6 +32,7 @@
 <script src="components/workout_history_display.js"></script>
 <script src="components/schedule_personal_workout.js"></script>
 <script src="components/coach_workout_display.js"></script>
+<script src="components/navbar.js"></script>
 <script src="js/app.js"></script>
 
 </body>
