--- a/Projekat/static/index.html
+++ b/Projekat/static/index.html
@@ -31,6 +31,7 @@
 <script src="components/change_workout.js"></script>
 <script src="components/users_display.js"></script>
 <script src="components/manager_users_display.js"></script>
+<script src="components/admin_approve_comments.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
